# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.33 2009-09-30 10:44:37 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.5 (2009/??/??)
 - (2009/09/30) Fixed bug#4338 - Enhancement: Be able to disable customer
     feature of customer_id to have access to all ticket with same customer id.
 - (2009/09/30) Fixed bug#4358 - Unable to insert inline images in customer
    frontend if WebUploadCacheModule is set to "FS".
 - (2009/09/30) Fixed bug#4355 - SLA dropdown does not populate in
    AgentTicketEmail.
 - (2009/09/29) Fixed bug#3248 - TicketSearch with ExtendedSearchCondition not
    working correct.
 - (2009/09/29) Fixed bug#4341 - RTE is not coupled with RichTextViewing. Rich
    text is being shown, even if the text/plain MIME part is available.
    Added new config option to force rich text viewing in ticket zoom.

    SysConfig -> Ticket -> Frontend::Agent::Ticket::ViewZoom ->
     -=> Ticket::Frontend::ZoomRichTextForce

 - (2009/09/28) Fixed bug#4269 - Softwareerror in stats module after uninstall
    ITSMIncidentProblemManagement
 - (2009/09/28) Fixed bug#4341 - No HighlightColors configured fills up OTRS log
    file with warnings.
 - (2009/09/28) Fixed bug#4328 - Incorrect charset in AgentTicketAttachment.
 - (2009/09/28) Fixed bug#4333 - StateGet() gives wrong error message.
 - (2009/09/26) Fixed bug#4302 - Dashboard: Tickets Stats graph incorrect
   (permission related).
 - (2009/09/24) Fixed bug#3909 - Optional TicketFreeTimes with AgentTicketCompose
    break when attaching a file
 - (2009/09/23) Fixed bug#4326 - Notification emails have empty lines by using
    opera at creation time.
 - (2009/09/23) Fixed bug#3001 - Agent ticket queue ordering by priority causes
    SQL error.